Added TareaNo4 and modify TareaNo3 title

--- a/TareaNo3.ipynb
+++ b/TareaNo3.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "__author__ = \"José Fernando Pérez Pérez\"\n",
+    "__info__   = \"Tarea No.3 Statistical Learning I\"\n",
+    "__email__  = \"josefernando.perez@galileo.edu\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [],
