Se agregaron los modelos a TareaNo4, pendiente conclusion y graficas

--- a/TareaNo4.ipynb
+++ b/TareaNo4.ipynb
@@ -32,6 +32,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\users\\fernando perez\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:96: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "non-resource variables are not supported in the long term\n",
+      "Enabled compatibility to tf1.x\n"
+     ]
+    }
+   ],
+   "source": [
+    "if tf.__version__.startswith(\"2.\"):\n",
+    "    import tensorflow.compat.v1 as tf\n",
+    "    tf.compat.v1.disable_v2_behavior()\n",
+    "    print(\"Enabled compatibility to tf1.x\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -214,18 +237,292 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Generamos los datos de entrenamiento**"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(18000, 784)\n",
+      "(3000, 784)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Seleccionamos las 3 categorías: 1,6 y 7\n",
+    "train_s = np.where((train_labels == 1)|(train_labels == 6)|(train_labels == 7))\n",
+    "test_s = np.where((test_labels == 1)|(test_labels == 6)|(test_labels == 7))\n",
+    "# Obtenemos la data de esas categorías\n",
+    "train_data = np.copy(train_images[train_s])\n",
+    "test_data = np.copy(test_images[test_s])\n",
+    "# Aplicamos la función reshape para volver a vector cada imagen\n",
+    "train_data.resize((train_data.shape[0], train_data.shape[1]*train_data.shape[2]))\n",
+    "test_data.resize((test_data.shape[0], test_data.shape[1]*test_data.shape[2]))\n",
+    "# Obtenemos las dimensiones actuales de los datos\n",
+    "train_shape = train_data.shape\n",
+    "test_shape = test_data.shape\n",
+    "print(train_shape)\n",
+    "print(test_shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 2, 0, ..., 0, 2, 0], dtype=uint8)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_y =np.copy(train_labels[train_s])\n",
+    "train_y[train_s == 1] = 0\n",
+    "train_y[train_s == 6] = 1\n",
+    "train_y[train_s == 7] = 2\n",
+    "for i in range(len(train_y)):\n",
+    "    if train_y[i] == 1:\n",
+    "        train_y[i] = 0\n",
+    "    elif train_y[i] == 6:\n",
+    "        train_y[i] = 1\n",
+    "    elif train_y[i] == 7:\n",
+    "        train_y[i] = 2\n",
+    "train_y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(18000, 785)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Agregamos el intercepto \n",
+    "train_data = np.column_stack((np.ones(N), train_data))\n",
+    "print(train_data.shape)\n",
+    "# Definimos variables referentes al conjunto de entrenamiento: Observaciones y features\n",
+    "N, K = train_shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Definimos el diccionario**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_values(['Trouser', 'Shirt', 'Sneaker'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "class_dict = {\n",
+    "    1 : \"Trouser\",\n",
+    "    6 : \"Shirt\",\n",
+    "    7 : \"Sneaker\"\n",
+    "             }\n",
+    "print(class_dict.values())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Definición del grafo para Regresión Logística**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tf.reset_default_graph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creación del grafo\n",
+    "tf.reset_default_graph()\n",
+    "g = tf.Graph()\n",
+    "\n",
+    "with g.as_default():\n",
+    "    # Creación de placeholders que manejara las variables de entrada\n",
+    "    X = tf.placeholder(tf.float32, shape = (None, 785), name = \"X\")\n",
+    "    Y = tf.placeholder(tf.int32, name = \"Labels\")\n",
+    "    \n",
+    "    # Learning rate\n",
+    "    lr = tf.placeholder(tf.float32, name = \"lr\")\n",
+    "    \n",
+    "    # Parametros entrenables\n",
+    "    W = tf.Variable(tf.truncated_normal(shape = [785, 3]), name = \"W\")\n",
+    "    \n",
+    "    # Logits \n",
+    "    with tf.name_scope(\"Logits\"):\n",
+    "        logits = tf.matmul(X, W, name = \"Logits\")\n",
+    "        y_hat = tf.nn.softmax(logits, name = \"y_hat\")\n",
+    "        \n",
+    "    # Función de coste\n",
+    "    with tf.name_scope(\"Funcion_Costo\"):\n",
+    "        cost = tf.reduce_mean(tf.nn.sparse_softmax_cross_entropy_with_logits(labels=Y, logits=logits), name = \"Costo\")\n",
+    "    \n",
+    "    # Optimizer\n",
+    "    with tf.name_scope(\"Optimizer\"):\n",
+    "        optimizer = tf.train.GradientDescentOptimizer(lr).minimize(cost)\n",
+    "        \n",
+    "    # Calcular accuracy del modelo\n",
+    "    with tf.name_scope(\"Accuracy\"):\n",
+    "        preds = tf.equal(Y, tf.argmax(y_hat, 1, output_type = tf.int32), name = \"correctPred\")\n",
+    "        acc = tf.reduce_mean(tf.cast(preds, tf.float32), name = \"accuracy\")\n",
+    "        \n",
+    "    # Tensores de sumarización para Tensorboard\n",
+    "    with tf.name_scope(\"Summaries\"):\n",
+    "        cost_sum = tf.summary.scalar(name = \"CostSummary\", tensor = cost)\n",
+    "        acc_sum = tf.summary.scalar(name = \"AccSummary\", tensor = acc)\n",
+    "        summaries = tf.summary.merge_all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(x, y, learning_rate, epochs, batch_size, print_age, tag):\n",
+    "    total_batches = (x.shape[0] // batch_size)\n",
+    "    \n",
+    "    with tf.Session(graph = g) as s:\n",
+    "        # Creamos un objeto para escribir archivo a Tensorboard\n",
+    "        writer = tf.summary.FileWriter('graph/'+tag, s.graph)\n",
+    "        # Inicializamos las variables\n",
+    "        s.run(tf.global_variables_initializer())\n",
+    "        \n",
+    "        for epoch in range(epochs):\n",
+    "            for batch in range(total_batches):\n",
+    "                xbatch = x[batch*batch_size:batch*batch_size+batch_size]\n",
+    "                ybatch = y[batch*batch_size:batch*batch_size+batch_size]\n",
+    "                feed_dict = {X : xbatch, Y : ybatch, lr : learning_rate}\n",
+    "                # Entrenamiento\n",
+    "                _, summ = s.run([optimizer, summaries], feed_dict = feed_dict)\n",
+    "                writer.add_summary(summ, epoch*total_batches + batch + 1)\n",
+    "                if (batch + 1) % print_age == 0:\n",
+    "                    c = s.run(cost, feed_dict = feed_dict)\n",
+    "                    print(f\"Epoch:{epoch}, Batch:{batch+1}, Costo:{c}\")\n",
+    "                    \n",
+    "        writer.close()\n",
+    "        weights = s.run(W)\n",
+    "        \n",
+    "    return (weights)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Entrenamos el modelo con los datos tal como están**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch:0, Batch:75, Costo:44.429168701171875\n",
+      "Epoch:0, Batch:150, Costo:21.805133819580078\n",
+      "Epoch:0, Batch:225, Costo:0.0\n",
+      "Epoch:0, Batch:300, Costo:0.0\n",
+      "Epoch:0, Batch:375, Costo:0.0\n",
+      "Epoch:0, Batch:450, Costo:0.0\n",
+      "Epoch:0, Batch:525, Costo:0.0\n",
+      "Epoch:1, Batch:75, Costo:0.8114089965820312\n",
+      "Epoch:1, Batch:150, Costo:17.567352294921875\n",
+      "Epoch:1, Batch:225, Costo:0.0\n",
+      "Epoch:1, Batch:300, Costo:0.0\n",
+      "Epoch:1, Batch:375, Costo:0.0\n",
+      "Epoch:1, Batch:450, Costo:0.0\n",
+      "Epoch:1, Batch:525, Costo:0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "weights_m1 = train(train_data, train_y, 0.002, 2, 32, 75, \"lr=0.01_btSize=32_epochs=2\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Entrenamiento con datos normalizados**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch:0, Batch:75, Costo:1.5160728693008423\n",
+      "Epoch:0, Batch:150, Costo:1.05381178855896\n",
+      "Epoch:0, Batch:225, Costo:0.6222967505455017\n",
+      "Epoch:0, Batch:300, Costo:0.7590663433074951\n",
+      "Epoch:0, Batch:375, Costo:0.3631667494773865\n",
+      "Epoch:0, Batch:450, Costo:0.15232130885124207\n",
+      "Epoch:0, Batch:525, Costo:0.5455551743507385\n",
+      "Epoch:1, Batch:75, Costo:0.7422264814376831\n",
+      "Epoch:1, Batch:150, Costo:0.5598559379577637\n",
+      "Epoch:1, Batch:225, Costo:0.1493518054485321\n",
+      "Epoch:1, Batch:300, Costo:0.5469948053359985\n",
+      "Epoch:1, Batch:375, Costo:0.17254847288131714\n",
+      "Epoch:1, Batch:450, Costo:0.0638677105307579\n",
+      "Epoch:1, Batch:525, Costo:0.48395246267318726\n"
+     ]
+    }
+   ],
+   "source": [
+    "weights_m2 = train(train_data/255, train_y, 0.01, 2, 32, 75, \"lr=0.01_btSize=32_epochs=2_norm\")"
+   ]
   }
  ],
  "metadata": {
