Agregar imagenes a proyecto final

--- a/ConclusionesyEnsembleLearning.ipynb
+++ b/ConclusionesyEnsembleLearning.ipynb
@@ -1,19 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Conclusiones.ipynb",
-      "provenance": [],
-      "mount_file_id": "19v0o5fBsle4rMvNf0-b84-6cfpWtEgvi",
-      "authorship_tag": "ABX9TyOOH+5M3RCO2dl7xq1eFuhe",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -148,12 +133,12 @@
         "def titanicPrediction(x):\n",
         "  # Carga de modelos\n",
         "  # Cargar el modelo SVM\n",
-        "  svm_model = joblib.load(\"/content/drive/My Drive/svm_final_3.pkl\")\n",
+        "  svm_model = joblib.load(\"/content/drive/My Drive/svm_final_C=1.pkl\")\n",
         "  # Cargamos los pesos para Regresion logistica\n",
-        "  reg_log = np.load(\"/content/drive/My Drive/reg_log_weights.npz\")\n",
+        "  reg_log = np.load(\"/content/drive/My Drive/reg_log_weights_lr=0.1_lambda=1e-09_bsize=569.npz\")\n",
         "  weights = reg_log[\"W\"]\n",
         "  # Carga modelo Naive Bayes implementado con Scikit-learn\n",
-        "  NB_model = joblib.load(\"/content/drive/My Drive/final_NB.pkl\")\n",
+        "  NB_model = joblib.load(\"/content/drive/My Drive/final_NB_comb[2,9].pkl\")\n",
         "\n",
         "  # Predicciones\n",
         "  y_hat_svm = svm_model.predict(x)\n",
@@ -450,5 +435,20 @@
         }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "Conclusiones.ipynb",
+      "provenance": [],
+      "mount_file_id": "19v0o5fBsle4rMvNf0-b84-6cfpWtEgvi",
+      "authorship_tag": "ABX9TyOOH+5M3RCO2dl7xq1eFuhe",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
