--- a/ProyectoFinal.ipynb
+++ b/ProyectoFinal.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "ProyectoFinal.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "mount_file_id": "1IaaMr15sLU623dcQ9M-nuvMO5vhnArhY",
-      "authorship_tag": "ABX9TyPM5h0/rriTmWTv9M7+ADBZ",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -1681,7 +1665,7 @@
         "# Entrenamos el modelo final con C=5.\n",
         "svm_final, _, _ = train_svm(X_train, X_val, Y_train, Y_val, 1.)\n",
         "# Guardamos el mejor modelo\n",
-        "joblib.dump(svm_final, \"/content/drive/My Drive/svm_final_3.pkl\")"
+        "joblib.dump(svm_final, \"/content/drive/My Drive/svm_final_C=1.pkl\")"
       ],
       "execution_count": 706,
       "outputs": [
@@ -2082,7 +2066,7 @@
       "source": [
         "#Almacenamos el\n",
         "print(get_metrics(inference_log_reg(X_train, Weights), Y_train))\n",
-        "#np.savez(file = \"/content/drive/My Drive/reg_log_weights.npz\", W = Weights)"
+        "np.savez(file = \"/content/drive/My Drive/reg_log_weights_lr=0.1_lambda=1e-09_bsize=569.npz\", W = Weights)"
       ],
       "execution_count": 787,
       "outputs": [
@@ -2120,6 +2104,22 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Grafo creado - Regresión Logística\n",
+        "![Grafo](images/Graph_LogReg.png)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Función de Costo para lr=0.1_lambda=1e-09_batch_Size=569\n",
+        "![Cost](images/CostFunction.png)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2300,7 +2300,7 @@
         "final_NB.fit(X_train[:, comb_vals[6]], Y_train)\n",
         "\n",
         "# Almacenamos el modelo\n",
-        "joblib.dump(final_NB, \"/content/drive/My Drive/final_NB.pkl\")"
+        "joblib.dump(final_NB, \"/content/drive/My Drive/final_NB_comb[2,9].pkl\")"
       ],
       "execution_count": 812,
       "outputs": [
@@ -2317,6 +2317,30 @@
           "execution_count": 812
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Link para Notebook Ensemble Learning y Conclusiones Finales\n",
+        "## [Ensemble y Conclusiones finales](ConclusionesyEnsembleLearning.ipynb)"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "ProyectoFinal.ipynb",
+      "provenance": [],
+      "collapsed_sections": [],
+      "mount_file_id": "1IaaMr15sLU623dcQ9M-nuvMO5vhnArhY",
+      "authorship_tag": "ABX9TyPM5h0/rriTmWTv9M7+ADBZ",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
